--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -17,6 +17,12 @@ http {
     auth_jwt_loginurl "http://localhost:5001/login";
 
     # =========================================================================
+    # DNS Resolver - Docker's internal DNS (enables failsafe startup)
+    # =========================================================================
+    resolver 127.0.0.11 valid=10s ipv6=off;
+    resolver_timeout 5s;
+
+    # =========================================================================
     # CORS Origin Mapping - Allow both 5001 and 5010
     # =========================================================================
     map $http_origin $cors_origin {
@@ -35,6 +41,8 @@ http {
         "https://localhost:5006" $http_origin;
         "http://localhost:5010"  $http_origin;
         "https://localhost:5010" $http_origin;
+        "http://localhost:5333"  $http_origin;
+        "https://localhost:5333" $http_origin;
 
         # 127.0.0.1 variants
         "http://127.0.0.1:5001"  $http_origin;
@@ -47,36 +55,17 @@ http {
         "https://127.0.0.1:5005" $http_origin;
         "http://127.0.0.1:5006"  $http_origin;
         "https://127.0.0.1:5006" $http_origin;
+        "http://127.0.0.1:5010"  $http_origin;
+        "https://127.0.0.1:5010" $http_origin;
+        "http://127.0.0.1:5333"  $http_origin;
+        "https://127.0.0.1:5333" $http_origin;
         "http://127.0.0.1:80"    $http_origin;
         "https://127.0.0.1:443"  $http_origin;
     }
 
-    upstream cloudapp {
-        server cloudapp:8099;
-    }
-
-    upstream petstore {
-        server petstore:8083;
-    }
-
-    upstream vehicles-api {
-        server vehicles-api:8880;
-    }
-
-    upstream jiraproxy {
-        server jiraproxy:8501;
-    }
-
-    upstream mlops-segmentation {
-        server mlops-segmentation:8600;
-    }
-
     # =========================================================================
-    # AI Orchestration Layer
+    # NO UPSTREAM BLOCKS - Using variables for failsafe startup
     # =========================================================================
-    upstream ai-orchestration-layer {
-        server ai-orchestration-layer:8700;
-    }
 
     server {
         listen 80;
@@ -84,6 +73,9 @@ http {
         server_name localhost;
         server_tokens off;
 
+        # =====================================================================
+        # Default Location - Static Files
+        # =====================================================================
         location / {
           root    /usr/share/nginx/html;
           index   index.html;
@@ -118,7 +110,11 @@ http {
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
 
-            proxy_pass http://ai-orchestration-layer/;
+            # Failsafe: resolve at request time, not startup
+            set $ai_backend "http://ai-orchestration-layer:8700";
+            rewrite ^/ai/(.*) /$1 break;
+            proxy_pass $ai_backend;
+
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -153,49 +149,16 @@ http {
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
 
-            proxy_pass http://ai-orchestration-layer/ws/;
+            set $ai_ws_backend "http://ai-orchestration-layer:8700";
+            rewrite ^/ai/ws/(.*) /ws/$1 break;
+            proxy_pass $ai_ws_backend;
+
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_read_timeout 86400;
-        }
-
-        # =====================================================================
-        # Conversation Sync Routes (AI Orchestration)
-        # =====================================================================
-        location /ai/conversation-sync {
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' $cors_origin always;
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
-                add_header 'Access-Control-Allow-Credentials' 'true' always;
-                add_header 'Access-Control-Max-Age' 86400;
-                add_header 'Content-Length' 0;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
-                return 204;
-            }
-
-            # Hide upstream CORS headers to prevent duplicates
-            proxy_hide_header Access-Control-Allow-Origin;
-            proxy_hide_header Access-Control-Allow-Credentials;
-            proxy_hide_header Access-Control-Allow-Methods;
-            proxy_hide_header Access-Control-Allow-Headers;
-
-            add_header 'Access-Control-Allow-Origin' $cors_origin always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
-
-            proxy_pass http://ai-orchestration-layer/conversation-sync;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Long polling support (for /responses endpoint)
-            proxy_read_timeout 120;
         }
 
         # =====================================================================
@@ -224,7 +187,15 @@ http {
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
 
-            proxy_pass http://cloudapp;
+            # Make sure to expore authorization header for jwt reuse
+            add_header 'Access-Control-Expose-Headers' 'Authorization' always;
+
+            set $cloudapp_backend "http://cloudapp:8099";
+            proxy_pass $cloudapp_backend;
+
+            # Make sure to pass authorization header to Cloudapp, as user is fetched from jwt
+            proxy_set_header Authorization $http_authorization;
+
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -253,7 +224,10 @@ http {
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
 
-            proxy_pass http://cloudapp;
+            set $cloudapp_ws_backend "http://cloudapp:8099";
+            proxy_pass $cloudapp_ws_backend;
+
+            proxy_set_header Authorization $http_authorization;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -278,12 +252,21 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Credentials;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
 
-            proxy_pass http://cloudapp;
+            set $cloudapp_backend "http://cloudapp:8099";
+            proxy_pass $cloudapp_backend;
+
+            proxy_set_header Authorization $http_authorization;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
             proxy_redirect off;
@@ -304,6 +287,12 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Credentials;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
@@ -316,7 +305,9 @@ http {
             # auth_jwt_use_keyfile on;
             # auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
 
-            proxy_pass http://petstore;
+            set $petstore_backend "http://petstore:8083";
+            proxy_pass $petstore_backend;
+
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
             proxy_redirect off;
@@ -337,6 +328,12 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Credentials;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
@@ -349,7 +346,9 @@ http {
             #auth_jwt_use_keyfile on;
             #auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
 
-            proxy_pass http://vehicles-api;
+            set $vehicles_backend "http://vehicles-api:8880";
+            proxy_pass $vehicles_backend;
+
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
             proxy_redirect off;
@@ -370,12 +369,20 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Credentials;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
 
-            proxy_pass http://jiraproxy;
+            set $jira_backend "http://jiraproxy:8501";
+            proxy_pass $jira_backend;
+
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
             proxy_redirect off;
@@ -396,12 +403,20 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Credentials;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
 
-            proxy_pass http://mlops-segmentation;
+            set $mlops_backend "http://mlops-segmentation:8600";
+            proxy_pass $mlops_backend;
+
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
             proxy_redirect off;
