Change to qwen3 1.7b for tool use and reasoning Add qwen3-embedding:4b for RAG Comment out Ollama in docker-compose as GPU acceleration is not available via Docker in Apple Silicon Change ollama urls to host.docker.internal, so docker network can communicate with native Ollama instance for GPU acceleration Implement proper RAG setup in ai-orchestration-layer Implement RAG UI for ai-orchestration-monitor add chunk size and xml filter on document parser make sure to handle in UI if RAG timeouts with new upload job manager

--- a/Dockerfile_OLLAMA
+++ b/Dockerfile_OLLAMA
@@ -3,7 +3,9 @@ FROM ollama/ollama:latest
 
 # Start the Ollama server in the background and pull the model from docker-compose NEXT_PUBLIC_LLM_MODEL variable
 ARG NEXT_PUBLIC_LLM_MODEL
+ARG NEXT_PUBLIC_LLM_MODEL_EMBEDDING
 RUN /bin/sh -c "ollama serve & sleep 2 && ollama pull $NEXT_PUBLIC_LLM_MODEL"
+RUN /bin/sh -c "ollama serve & sleep 2 && ollama pull $NEXT_PUBLIC_LLM_MODEL_EMBEDDING"
 
 # Set the entry point to start Ollama
 ENTRYPOINT ["/bin/ollama"]
