--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -17,6 +17,14 @@ http {
     auth_jwt_loginurl "http://localhost:5001/login";
 
     # =========================================================================
+    # FILE UPLOAD SETTINGS - REQUIRED FOR RAG
+    # =========================================================================
+    client_max_body_size 20M;           # Allow uploads up to 20MB
+    client_body_buffer_size 20M;        # Buffer for request body
+    client_body_timeout 120s;           # Timeout for reading request body
+    proxy_request_buffering off;        # Stream uploads to backend (optional)
+
+    # =========================================================================
     # DNS Resolver - Docker's internal DNS (enables failsafe startup)
     # =========================================================================
     resolver 127.0.0.11 valid=10s ipv6=off;
@@ -80,6 +88,56 @@ http {
           root    /usr/share/nginx/html;
           index   index.html;
           try_files $uri $uri/ /index.html;
+        }
+
+        # =====================================================================
+        # AI Orchestration Layer - RAG Upload Endpoint (SPECIFIC)
+        # Must be before the general /ai/ location
+        # =====================================================================
+        location /ai/rag/documents/upload {
+            # Handle CORS preflight
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Max-Age' 86400;
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                return 204;
+            }
+
+            # Hide upstream CORS headers to prevent duplicates
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Credentials;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+            # Upload-specific settings
+            client_max_body_size 20M;
+            client_body_buffer_size 20M;
+            client_body_timeout 300s;
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+
+            # Failsafe: resolve at request time, not startup
+            set $ai_backend "http://ai-orchestration-layer:8700";
+            rewrite ^/ai/(.*) /$1 break;
+            proxy_pass $ai_backend;
+
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Important for multipart uploads
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
         }
 
         # =====================================================================
@@ -185,6 +243,8 @@ http {
             proxy_hide_header Access-Control-Allow-Headers;
 
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
 
             # Make sure to expore authorization header for jwt reuse
