--- a/docker-compose-infrastructure.yml
+++ b/docker-compose-infrastructure.yml
@@ -91,21 +91,27 @@ services:
       - backend
     restart: unless-stopped
 
-  # ===========================================================================
-  # LLM Provider - Internal only
-  # ===========================================================================
-  ollama:
-    container_name: ollama
-    build:
-      context: ./
-      dockerfile: Dockerfile_OLLAMA
-      args:
-        NEXT_PUBLIC_LLM_MODEL: 'qwen3:4b'
-    restart: unless-stopped
-    ports:
-      - 11434:11434
-    networks:
-      - backend
+#Local install on Apple Silicon to use GPU acceleration
+  #  brew install ollama
+  # ollama pull qwen3:1.7b
+  # ollama pull qwen3-embedding:4b
+  # ollama serve
+  #  # ===========================================================================
+#  # LLM Provider - Internal only
+#  # ===========================================================================
+#  ollama:
+#    container_name: ollama
+#    build:
+#      context: ./
+#      dockerfile: Dockerfile_OLLAMA
+#      args:
+#        NEXT_PUBLIC_LLM_MODEL: 'qwen3:1.7b'
+#        NEXT_PUBLIC_LLM_MODEL_EMBEDDING: 'qwen3-embedding:4b'
+#    restart: unless-stopped
+#    ports:
+#      - 11434:11434
+#    networks:
+#      - backend
 
   # ===========================================================================
   # AI ORCHESTRATION INFRASTRUCTURE - Internal only
@@ -195,8 +201,8 @@ services:
       ENVIRONMENT: ${ENVIRONMENT:-development}
 
       # LLM Configuration
-      LLM_MODEL: ${LLM_MODEL:-qwen3:4b}
-      OLLAMA_URL: http://ollama:11434
+      LLM_MODEL: ${LLM_MODEL:-qwen3:1.7b}
+      OLLAMA_URL: http://host.docker.internal:11434
       LLM_TEMPERATURE: ${LLM_TEMPERATURE:-0.7}
       LLM_MAX_TOKENS: ${LLM_MAX_TOKENS:-2000}
 
@@ -239,14 +245,15 @@ services:
       LOG_FORMAT: ${LOG_FORMAT:-json}
     # NO ports exposed - only accessible via NGINX
     volumes:
+      - chroma_data:/data/chroma
       - ./logs:/app/logs
     depends_on:
       redis:
         condition: service_started
       chromadb:
         condition: service_started
-      ollama:
-        condition: service_started
+#      ollama:
+#        condition: service_started
     healthcheck:
       test: [ "CMD-SHELL", "curl -f http://localhost:8700/health || exit 1" ]
       interval: 30s
@@ -285,7 +292,7 @@ volumes:
   mongodb_data:
     name: ai-orchestration-mongodb
   chroma_data:
-    name: ai-orchestration-chroma
+    driver: local
 
 # ===========================================================================
 # NETWORKS - Must match docker-compose-app.yml
